--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,18 @@
 {
   "name" : "Frame-Fit",
-  "version" : "0.4",
-  "description" : "Fit frames to content",
+  "version" : "0.5",
+  "description" : "Reduce scrolling by fitting frames to content",
   "background" : { 
     "scripts": ["background.js"] 
+  },
+  "commands": {
+          "run-frame-fit": {
+            "suggested_key": {
+              "default": "Ctrl+Shift+Y",
+              "mac": "Command+Shift+Y"
+            },
+            "description": "Run Frame-Fit"
+          }
   },
   "permissions" : [
     "contextMenus",
